--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <p class="text-gray-400 mb-6 text-center" data-i18n="contact_subtitle">Let's discuss how Neurasoft LTD can power your next great idea. Fill out the form below to secure your appointment.</p>
                     
                     <!-- Netlify Form Setup -->
-                    <form name="booking" method="POST" data-netlify="true" action="/success" class="space-y-6">
+                    <form name="booking" method="POST" data-netlify="true" action="" class="space-y-6">
                         <input type="hidden" name="form-name" value="booking" />
 
                         <div>
