--- a/d.html
+++ b/d.html
@@ -9,94 +9,115 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav>
-    <div class="container">
-      <a href="#" class="logo">NeuraSoft LTD</a>
+  <nav class="navbar">
+    <div class="container nav-flex">
+      <a href="#home" class="logo">NeuraSoft LTD</a>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#partners">Partners</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section id="home" class="hero">
-    <div class="container">
-      <small>Under construction</small>
+  <header id="home" class="hero creative-bg">
+    <div class="container hero-content">
+      <img src="img/neurasoft.jpg" alt="NeuraSoft Logo" class="hero-logo">
       <h1>Innovative Solutions for a Smarter Future</h1>
-      <p>We deliver cutting-edge software solutions tailored to your needs.</p>
-      <a href="#contact" class="btn">Get in Touch</a>
+      <p class="hero-sub">Empowering businesses with next-gen technology.</p>
+      <a href="#contact" class="btn btn-primary">Get in Touch</a>
     </div>
-  </section>
+  </header>
 
   <!-- About Section -->
-  <section id="about" class="about">
-    <div class="container">
-      <h2>About Us</h2>
-      <p>NeuraSoft LTD is a leading software development company specializing in innovative solutions for businesses worldwide. Our mission is to empower organizations with technology that drives growth and efficiency.</p>
+  <section id="about" class="about creative-section">
+    <div class="container about-flex">
+      <div class="about-text">
+        <h2>About NeuraSoft</h2>
+        <p>We are a passionate team of developers, designers, and innovators dedicated to building software that transforms businesses. Our mission is to deliver creative, reliable, and scalable solutions for clients worldwide.</p>
+        <ul class="about-list">
+          <li>Custom Software Development</li>
+          <li>AI & Machine Learning Solutions</li>
+          <li>Cloud Integration</li>
+          <li>UI/UX Design</li>
+        </ul>
+      </div>
+      <div class="about-img">
+        <img src="img/neurasoft.jpg" alt="Team NeuraSoft">
+      </div>
     </div>
   </section>
 
   <!-- Portfolio Section -->
-  <section id="portfolio" class="portfolio">
+  <section id="portfolio" class="portfolio creative-section">
     <div class="container">
-      <h2>Our Work</h2>
+      <h2>Featured Projects</h2>
       <div class="projects">
         <div class="project">
-          <img src="assets/images/project1.jpg" alt="Project 1">
-          <h3>Project 1</h3>
-          <p>Description of the project and its impact.</p>
+          <img src="img/project1.jpg" alt="Project 1">
+          <h3>AI Chatbot Platform</h3>
+          <p>Automated customer support with natural language understanding and seamless integration.</p>
         </div>
         <div class="project">
-          <img src="assets/images/project2.jpg" alt="Project 2">
-          <h3>Project 2</h3>
-          <p>Description of the project and its impact.</p>
+          <img src="img/project2.jpg" alt="Project 2">
+          <h3>Cloud Analytics Suite</h3>
+          <p>Real-time data analytics and visualization for enterprise clients.</p>
         </div>
         <div class="project">
-          <img src="assets/images/project3.jpg" alt="Project 3">
-          <h3>Project 3</h3>
-          <p>Description of the project and its impact.</p>
+          <img src="img/project3.jpg" alt="Project 3">
+          <h3>Mobile Health App</h3>
+          <p>Empowering users to track wellness and connect with healthcare professionals.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Testimonials Section -->
-  <section id="testimonials" class="testimonials">
+  <section id="testimonials" class="testimonials creative-section">
     <div class="container">
       <h2>What Our Clients Say</h2>
-      <div class="testimonial">
-        <p>"NeuraSoft LTD transformed our business with their innovative solutions. Highly recommended!"</p>
-        <span>- Client A</span>
-      </div>
-      <div class="testimonial">
-        <p>"Their team is professional, responsive, and delivers exceptional results."</p>
-        <span>- Client B</span>
+      <div class="testimonials-grid">
+        <div class="testimonial">
+          <img src="img/client1.jpg" alt="Client A" class="testimonial-img">
+          <p>"NeuraSoft transformed our business with their innovative solutions. Highly recommended!"</p>
+          <span>- Client A</span>
+        </div>
+        <div class="testimonial">
+          <img src="img/client2.jpg" alt="Client B" class="testimonial-img">
+          <p>"Their team is professional, responsive, and delivers exceptional results."</p>
+          <span>- Client B</span>
+        </div>
+        <div class="testimonial">
+          <img src="img/client3.jpg" alt="Client C" class="testimonial-img">
+          <p>"Creative, reliable, and always on time. NeuraSoft is our go-to tech partner."</p>
+          <span>- Client C</span>
+        </div>
       </div>
     </div>
   </section>
-<!-- Partners Section -->
-<section id="partners" class="partners">
+  <!-- Partners Section -->
+  <section id="partners" class="partners creative-section">
     <div class="container">
       <h2>Our Partners</h2>
       <div class="partner-logos">
         <div class="partner">
-          <img src="assets/images/hexagonlab-logo.png" alt="HexagonLab">
+          <img src="img/hexagonlab-logo.png" alt="HexagonLab">
           <p>HexagonLab</p>
         </div>
         <div class="partner">
-          <img src="assets/images/digital-radio-bangla-logo.png" alt="Digital Radio Bangla">
+          <img src="img/digital-radio-bangla-logo.png" alt="Digital Radio Bangla">
           <p>Digital Radio Bangla</p>
         </div>
         <div class="partner">
-          <img src="assets/images/unidia-logo.png" alt="Unidia">
+          <img src="img/unidia-logo.png" alt="Unidia">
           <p>Unidia</p>
         </div>
         <div class="partner">
-          <img src="assets/images/isupport-logo.png" alt="iSupport">
+          <img src="img/isupport-logo.png" alt="iSupport">
           <p>iSupport</p>
         </div>
       </div>
@@ -105,22 +126,36 @@
   
 
   <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <form id="contact-form">
+  <section id="contact" class="contact creative-section">
+    <div class="container contact-flex">
+      <div class="contact-info">
+        <h2>Contact Us</h2>
+        <p>Ready to start your next project? Reach out to our team and let's build something amazing together.</p>
+        <ul>
+          <li><strong>Email:</strong> info@neurasoft.com</li>
+          <li><strong>Phone:</strong> +123 456 7890</li>
+          <li><strong>Location:</strong> Dhaka, Bangladesh</li>
+        </ul>
+      </div>
+      <form id="contact-form" class="contact-form">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
+        <button type="submit" class="btn btn-primary">Send Message</button>
       </form>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer>
+  <footer class="footer creative-bg">
     <div class="container">
       <p>&copy; 2025 NeuraSoft LTD. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="#home">Home</a> |
+        <a href="#about">About</a> |
+        <a href="#portfolio">Portfolio</a> |
+        <a href="#contact">Contact</a>
+      </div>
     </div>
   </footer>
 
