--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <meta name="google-site-verification" content="kvrSijJfKuDH6uFmxatdi9VKpP4EKBGpIAEMNf6k6mA" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="title">Neurasoft LTD - Innovative Technology Solutions</title>
